--- a/app/app.css
+++ b/app/app.css
@@ -1,5 +1,8 @@
 canvas {
   background: #ffffff !important;
+  -webkit-box-shadow: 0 0 3px 1px rgba(0,0,0,0.3);
+  -moz-box-shadow: 0 0 3px 1px rgba(0,0,0,0.3);
+  box-shadow: 0 0 3px 1px rgba(0,0,0,0.3);
 }
 
 .konvajs-content {
@@ -88,6 +91,12 @@ border-right: .1rem solid #dbdddf;
   text-align: center;
 }
 
+.box-shadow {
+  -webkit-box-shadow: 0 0 3px 1px rgba(0,0,0,0.3);
+  -moz-box-shadow: 0 0 3px 1px rgba(0,0,0,0.3);
+  box-shadow: 0 0 3px 1px rgba(0,0,0,0.3);
+}
+
 .buttom-item {
   padding: .3rem !important;
   width: 2rem;
@@ -95,6 +104,9 @@ border-right: .1rem solid #dbdddf;
 
 .input-group {
   flex-wrap: nowrap !important;
+  -webkit-box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.2);
+  -moz-box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.2);
+  box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.2);
 }
 
 /* SRCOLL */
